<resources>
    <string name="app_name">AppListaCurso2023</string>
    <string name="txt_titulo">Aplicativo Lista Vip Curso Android</string>
    <string name="txt_hint_edit_Primeiro_Nome">Primeiro Nome</string>
    <string name="txt_hint_edit_Sobre_Nome">Sobre Nome</string>
    <string name="txt_hint_edit_Curso_Desejado">Nome Do Curso Desejado</string>
    <string name="txt_hint_edit_Contato">Telefone de Contato</string>
    <string name="txt_button_Salvar">Salvar</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_finalizar">Finalizar</string>
</resources>